--- a/styles.css
+++ b/styles.css
@@ -22,9 +22,9 @@ body {
   .profile-picture {
     width: auto;
     height: auto;
-    max-width: 150px;
-    max-height: 150px;
-    border-radius: 45%;
+    
+    max-width: 100%;
+    /* border-radius: 45%; */
     margin-bottom: 20px;
   }
   
